<resources>
    <string name="app_name">Soc-Net-Project</string>

    <string name="error_unknown">An unknown error has occurred.</string>
    <string name="error_network_unavailable">Network is not available.</string>
    <string name="loading">Loading</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>

    <string name="facebook_app_id">1639506919647852</string>
    <string name="facebook_login">Facebook login</string>
    <string name="facebook_api_version">v2.5</string>

    <string name="bearer">Bearer %s</string>
    <string name="facebook_image_url">https://graph.facebook.com/%s/picture?height=192&amp;width=192</string>

    <string name="login_text">Click here to login with Facebook</string>

    <string name="search">Search</string>
    <string name="search_list_placeholder">Enter a movie title to search!</string>
    <string name="search_list_empty">Sorry, no movies found :(</string>

    <string name="dashboard">Dashboard</string>
    <string name="explore">Explore</string>
    <string name="watch_list">Watch List</string>
    <string name="logout">Logout</string>

    <string name="imdb_top_20">IMDB Top 20</string>
    <string name="recommended">Recommended</string>

    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_watch_list">You currently don\'t have any movies in your watch list.\nExplore content by swiping right!</string>
    <string name="liked_list">Facebook Liked Movies</string>
    <string name="top_rated">Top Rated Movies</string>
    <string name="title">Title</string>
    <string name="date_released">Date Released</string>
    <string name="genres">Genres</string>
    <string name="overview">Overview</string>
    <string name="comments">Comments</string>
    <string name="comments_placeholder">No comments yet.\nBe the first to comment!</string>
    <string name="rating">Rating</string>
    <string name="enter_comment">Enter comment here…</string>
    <string name="post_comment">Post comment</string>
    <string name="rate_it">Rate it!</string>
    <string name="not_rated">Please choose rating first!</string>
    <string name="movie_removed_from_watchlist">Movie removed from watchlist!</string>
    <string name="movie_added_to_watchlist">Movie added to watchlist!</string>
</resources>
